--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-
+        <h1>hola</h1>
         <div class="container">
             <header class="header">
                 <nav class="nav">
